fix percentage & align right

--- a/display/style/main.css
+++ b/display/style/main.css
@@ -745,6 +745,13 @@ h1 {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5366f3', endColorstr='#0a1aa1',GradientType=0 ); /* IE6-9 */
 }
 
+.highscores {
+
+	width: 20%;
+	float:left;
+	text-align: right;
+}
+
 
 /* ---------------- fix ------------------------*/
 
